country controller nearly finished

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,9 +6,12 @@
 <body>
 <main>
     <nav>
-        <ul>
+        <ul class="navbar">
             <li>
-                <a>Countries</a>
+                <a href="/">Home</a>
+            </li>
+            <li>
+                <a href="/countries">Countries</a>
             </li>
             <li>
                 <a>Cities</a>
