city controller index working

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,10 +14,10 @@
                 <a href="/countries">Countries</a>
             </li>
             <li>
-                <a>Cities</a>
+                <a href="/cities">Cities</a>
             </li>
             <li>
-                <a>Attractions</a>
+                <a href="/attractions">Attractions</a>
             </li>
         </ul>
     </nav>
