--- a/templates/countries/index.html
+++ b/templates/countries/index.html
@@ -7,7 +7,7 @@
             <p><a href="/countries/{{country.id}}">{{country.name}}</a></p>
         {% endfor %}
     </div>
-    <form action="/countries/edit"> 
+    <form action="countries/edit"> 
         <button type="submit">
         Add New Country
         </button>
