--- a/templates/countries/show.html
+++ b/templates/countries/show.html
@@ -6,6 +6,7 @@
     <hr>
     <p>Continent: {{country.continent}}</p>
     <p><a href="/countries/{{country.id}}/edit">Edit Country</a></p>
+    <p><a href="/countries/{{country.id}}/delete">Delete Country</a></p>
     <p>List of Cities in {{country.name}} that you would like to visit:</p>
     {% for city in cities %}
         <p>{{city.name}}</p>
