countries fully working

--- a/templates/cities/index.html
+++ b/templates/cities/index.html
@@ -7,7 +7,7 @@
             <p><a href="/cities/{{city.id}}">{{city.name}}</a></p>
         {% endfor %}
     </div>
-    <form action="cities/edit">
+    <form action="cities/new">
         <button type="submit">
             Add New City
         </button>
