--- a/templates/cities/show.html
+++ b/templates/cities/show.html
@@ -16,5 +16,10 @@
     <p><a href="/cities/{{city.id}}/edit">Edit City</a></p>
     <p><a href="/cities/{{city.id}}/delete">Delete City</a></p>
 </div>
-
+<div>
+    <p>List of Attractions in {{city.name}} that you would like to visit:</p>
+    {% for attraction in attractions %}
+        <p>{{attraction.name}}</p>
+    {% endfor %}
+</div>
 {% endblock content %}
