--- a/templates/countries/show.html
+++ b/templates/countries/show.html
@@ -12,4 +12,11 @@
         <p>{{city.name}}</p>
     {% endfor %}
 </div>
+<!-- <div>
+    <form action="/cities/new">
+    <button type="submit">
+        Add another City
+    </button>
+    </form>
+</div> -->
 {% endblock content %}
