--- a/templates/attractions/edit.html
+++ b/templates/attractions/edit.html
@@ -1,25 +1,25 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<form action="/attractions" method="POST">
+<form action="/attractions/{{attraction.id}}" method="POST">
 <div>
     <label for="name">Attraction name:</label>
-    <input type="text" name="name" placeholder="Attraction name" required autofocus>
+    <input type="text" name="name" value="{{attraction.name}}" required autofocus>
 </div>
 <div>
     <label for="cost">Cost:</label>
-    <input type="number" min="0" step="0.01" name="cost" placeholder="Cost" required autofocus>
+    <input type="number" name="cost" min="0" step="0.01" value="{{attraction.cost}}" required autofocus>
 </div>
 <div>
     <label for="city">City name:</label>
-    <select name="city" id="city">
-        <option value="city" disabled selected hidden>Select City</option>
+    <select name="city_id" id="city">
+        <option value="{{attraction.city.id}}">{{attraction.city.name}}</option>
     {% for city in cities %}
         <option value="{{city.id}}">{{city.name}}</option>    
     {% endfor %}
         <option value="select_city" disabled>Can't see the City you need? Please create a City first.</option>
 </select>
 </div>
-<button type="submit">Add Attraction</button>
+<button type="submit">Edit Attraction</button>
 </form>
 {% endblock content %}
