displaying a list of all cities visited

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,4 +4,13 @@
 <h1>Your World</h1>
 
 <p>Record your travel wishlist here!</p>
+
+<form action="/cities/visited">
+    <button type="submit">See where you have been!</button>
+</form>
+
+<form action="/cities/not_visited">
+    <button type="submit">See where you want to go!
+    </button>
+</form>
 {% endblock %}
