attraction, city and country user inputs capitalized

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,4 +13,9 @@
     <button type="submit">See where you want to go!
     </button>
 </form>
+
+<form action="/<search>">
+    <input type="text" value="search">
+    <button type="submit">Search</button>
+</form>
 {% endblock %}
