--- a/templates/attractions/index.html
+++ b/templates/attractions/index.html
@@ -19,7 +19,7 @@
         {% endfor %}
     </div> -->
     <form action="attractions/new"> 
-        <button type="submit">
+        <button class="button" type="submit">
         Add New Attraction
         </button>
     </form>
