--- a/templates/attractions/new.html
+++ b/templates/attractions/new.html
@@ -20,6 +20,6 @@
         <option value="select_city" disabled>Can't see the City you need? Please create a City first.</option>
 </select>
 </div>
-<button type="submit">Add Attraction</button>
+<button class="button" type="submit">Add Attraction</button>
 </form>
 {% endblock content %}
