--- a/templates/base.html
+++ b/templates/base.html
@@ -3,11 +3,12 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"> -->
-    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <title>On Top Of The World</title>
 </head>
 <body>
 <main>
+    <header>
     <nav>
         <ul class="navbar">
             <li>
@@ -24,6 +25,7 @@
             </li>
         </ul>
     </nav>
+    </header>
     <section id="content">
     {% block content %}
 
