--- a/templates/cities/edit.html
+++ b/templates/cities/edit.html
@@ -28,6 +28,6 @@
     <label for="name">Notes:</label>
     <input type="text" name="notes" value="{{city.notes}}">
 </div>
-<button type="submit">Edit City</button>
+<button class="button" type="submit">Edit City</button>
 </form>
 {% endblock content %}
