--- a/templates/cities/new.html
+++ b/templates/cities/new.html
@@ -28,6 +28,6 @@
     <label for="name">Notes:</label>
     <input type="text" name="notes" placeholder="Write your notes here:">
 </div>
-<button type="submit">Add City</button>
+<button class="button" type="submit">Add City</button>
 </form>
 {% endblock content %}
