--- a/templates/countries/index.html
+++ b/templates/countries/index.html
@@ -8,7 +8,7 @@
         {% endfor %}
     </div>
     <form action="countries/new"> 
-        <button type="submit">
+        <button class="button" type="submit">
         Add New Country
         </button>
     </form>
