--- a/templates/countries/new.html
+++ b/templates/countries/new.html
@@ -19,6 +19,6 @@
         <option value="south_america">South America</option>
     </select>
 </div>
-<button type="submit">Add Country</button>
+<button class="button type="submit">Add Country</button>
 </form>
 {% endblock content %}
