--- a/templates/cities/index.html
+++ b/templates/cities/index.html
@@ -8,7 +8,7 @@
         {% endfor %}
     </div>
     <form action="cities/new">
-        <button type="submit">
+        <button class= "button" type="submit">
             Add New City
         </button>
 
