--- a/templates/cities/show.html
+++ b/templates/cities/show.html
@@ -12,10 +12,18 @@
         <label for="">Visited?<i class="fa fa-times fa-2x" aria-hidden="true"></i></label>
         {% endif %}
 </div>
-<div>
+<form action="/cities/{{city.id}}/edit">
+    <button class="button" type="submit">Edit City
+    </button>
+</form>
+<form action="/cities/{{city.id}}/delete">
+    <button class="button" type="submit">Delete City
+    </button>
+</form>
+<!-- <div>
     <p><a href="/cities/{{city.id}}/edit">Edit City</a></p>
     <p><a href="/cities/{{city.id}}/delete">Delete City</a></p>
-</div>
+</div> -->
 <div>
     <p>List of Attractions in {{city.name}} that you would like to visit:</p>
     {% for attraction in attractions %}
