--- a/templates/countries/edit.html
+++ b/templates/countries/edit.html
@@ -18,6 +18,6 @@
             <option value="south_america">South America</option>
         </select>
     </div>
-    <button type="submit">Edit Country</button>
+    <button class="button" type="submit">Edit Country</button>
     </form>
 {% endblock content %}
