updated the user inputs with import string

--- a/templates/attractions/show.html
+++ b/templates/attractions/show.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
     <div>
-        <p>{{attraction.name}}</p>
+        <p><b>{{attraction.name}}</b></p>
         <hr>
         <p>Cost: {{attraction.cost}}</p>
         <p>City: {{attraction.city.name}}</p>
