--- a/templates/cities/not_visited.html
+++ b/templates/cities/not_visited.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
     <div>
-        <p>Here are all the Cities you would like to visit:</p>
+        <p><b>Here are all the Cities you would like to visit:</b></p>
         <hr>
         {% for city in cities %}
             <p>{{city.name}}</p>
