--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,6 @@
 
 <form action="/<search>">
     <input type="text" value="search">
-    <button type="submit">Search</button>
+    <button class="button" type="submit">Search</button>
 </form>
 {% endblock %}
