--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -1,6 +1,30 @@
 body{
     font-family: sans-serif;
     background-color: lightblue;
+    
+}
+
+.index{
+    padding-left: 36px;
+}
+ul.navbar {
+    display: flex;
+    flex-direction: column; 
+    padding-top: 36px;
+    padding-bottom: 10px;
+}
+
+ul.navbar > li {
+    padding-right: 15px;
+    padding-top: 10px;
+    
+}
+
+ul.navbar > li > a {
+    color: black;
+    font-size: 24;
+    font-weight: bold;
+    text-decoration: none;
 }
 
 .navbar {
@@ -17,6 +41,7 @@ body{
     border: 1px solid blue;
     background-color: blue;
     border-radius: 5px;
+    margin: 10px;
 }
 
 input[type=text] {
@@ -32,11 +57,22 @@ input[type=number] {
     border: 0;
 }
 
+button[type=submit] {
+    padding: 10px;
+    display: inline-block;
+}
+
 select {
     padding: 10px;
     margin: 10px 0;
     border: 0;
     border-radius: 10px;
+}
+
+.index_buttons {
+    display: flex;
+    align-items: flex-start;
+    padding-left: 36px;
 }
 
 .edit_attraction-city_name{
@@ -45,4 +81,8 @@ select {
 
 .edit_attraction_button {
     margin-top: 25px;
+}
+
+.search {
+    padding-left: 36px;
 }
