--- a/templates/index.html
+++ b/templates/index.html
@@ -6,18 +6,21 @@
 
 <p>Record your travel wishlist here!</p>
 </Section>
-
+<section class="index_buttons">
 <form action="/cities/visited">
     <button class="button" type="submit">See where you have been!</button>
 </form>
+<br>
 
 <form action="/cities/not_visited">
     <button class="button" type="submit">See where you want to go!
     </button>
 </form>
+</section>
 
-<form action="/<search>">
+<form class="search" action="/<search>">
     <input type="text" value="search">
     <button class="button" type="submit">Search</button>
 </form>
+
 {% endblock %}
