--- a/templates/base.html
+++ b/templates/base.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 <main>
-    <header>
+    <header class="navbar">
     <nav>
-        <ul class="navbar">
+        <ul >
             <li>
                 <a href="/">Home</a>
             </li>
@@ -24,8 +24,11 @@
             </li>
         </ul>
     </nav>
+    <h1>Your World</h1>
     </header>
     <section id="content">
+
+       
     {% block content %}
 
     {% endblock%}
