--- a/templates/cities/index.html
+++ b/templates/cities/index.html
@@ -1,17 +1,19 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class="cities_list">
+<form action="cities/new">
+    <button class= "button" type="submit">
+        Add New City
+    </button>
+
+</form>
     
-    <div>
         {% for city in cities %}
             <p><a href="/cities/{{city.id}}">{{city.name}}</a></p>
         {% endfor %}
-    </div>
-    <form action="cities/new">
-        <button class= "button" type="submit">
-            Add New City
-        </button>
+    
 
-    </form>
+    </div>
 
 {% endblock content %}
