search function working for cities

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,8 +3,10 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    <title>On Top Of The World</title>
+    <script src="https://kit.fontawesome.com/26a6ea0650.js" crossorigin="anonymous"></script>
+    <title>On Top Of The World</i></title>
 </head>
+    
 <body>
 <main>
     <header class="navbar">
