saving eveyrthing before I start mucking about with it gst q q/ ~

--- a/templates/attractions/show.html
+++ b/templates/attractions/show.html
@@ -14,4 +14,8 @@
         <button class="button" type="submit">Delete Attraction
         </button>
     </form>
+    <form action="/attractions">
+        <button class="button" type="submit">See all Attractions
+        </button>
+    </form>
 {% endblock content %} 
