--- a/templates/countries/show.html
+++ b/templates/countries/show.html
@@ -13,6 +13,10 @@
         <button class="button" type="submit">Delete Country
         </button>
     </form>
+    <form action="/countries">
+        <button class="button" type="submit">Back to Countries
+        </button>
+    </form>
     <p>List of Cities in {{country.name}} that you would like to visit:</p>
     <hr>
     {% for city in cities %}
